# HackAndGothic

./: .gitignore  LICENSE.md  README.md  flake.nix
Content/: Gothic.src
Content/Game/: Focus.d  Functions.d  Player.d  Startup.d  Text.d  Texts.d
Content/Game/Items/: DevItems.d
Content/Game/Items/Templates/: ElBastardo.d  ItMw_Dagger.d  ItMw_DragonSlayer.d  ItMw_Halberd.d  ItMw_HeavyBranch.d  ItMw_OrcSlayer.d  ItMw_Pickaxe.d  ItMw_RustyAxe.d  ItMw_RustyTwoHander.d  ItMw_ShortSword.d
Content/Game/NPCs/: Enemy.d  PC_Hero.d
Content/Game/NPCs/Templates/: Goblin.d
Content/Internal/: Constants.d
Content/Internal/Classes/: C_FOCUS.d  C_ITEM.d  C_NPC.d
Content/_Internal/: Constants.d
Content/_Internal/Classes/: C_FOCUS.d  C_ITEM.d  C_NPC.d
Generator/: Cargo.toml
Generator/src/: main.rs  weapon.rs
Generator/src/generators/: mod.rs  weapon.rs
Generator/src/generators/affix/: enemy.rs  mod.rs  weapon.rs
