[package]
name = "generator"
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.21"
regex = "1.10.4"
ron = "0.8.1"
serde = { version = "1.0.198", features = ["derive"] }
